--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,54 +10,9 @@
     <div class="main-container">
         <main-header></main-header>
         <main-content></main-content>
+        <router-outlet class="main-outlet"></router-outlet>
         <main-footer></main-footer>
-        <!-- <div class="row-one">
-            <div class="container-padding">
-                <img src="http://pluspng.com/img-png/dragon-ball-png-five-star-dragon-ball-png-306.png"
-                    style="width:100px;height:100px;" class="center">
-            </div>
-            <div (mouseleave)="resetGreeting()" (mouseenter)="showGreeting()" id="r1c2" class="container-padding">
-                r1c2
-            </div>
-            <div class="container-padding">
-                <img src="http://pluspng.com/img-png/dragon-ball-png-five-star-dragon-ball-png-306.png"
-                    style="width:100px;height:100px;" class="center">
-            </div>
-        </div> -->
-        <!-- <div class="row-two">
-            <div class="container-padding">
-                r2c1
-                <img src="https://i.pinimg.com/originals/8d/90/8a/8d908ae4bb456d5e864b5346affe6070.gif"
-                    style="width:225px;height:300px;">
-            </div>
-            <div class="container-padding">
-                Hover mouse on top center box
-            </div>
-            <div class="container-padding">
-                r2c3
-                <img src="https://i.pinimg.com/originals/8d/90/8a/8d908ae4bb456d5e864b5346affe6070.gif"
-                    style="width:225px;height:300px;">
-            </div>
-        </div> -->
-        <!-- <div class="row-three">
-            <div class="container-padding">
-                <img src="http://pluspng.com/img-png/dragon-ball-png-five-star-dragon-ball-png-306.png"
-                    style="width:100px;height:100px;" class="center">
-
-            </div>
-            <div class="container-padding">
-                r3c2
-            </div>
-            <div class="container-padding">
-                <img src="http://pluspng.com/img-png/dragon-ball-png-five-star-dragon-ball-png-306.png"
-                    style="width:100px;height:100px;" class="center">
-
-            </div>
-        </div> -->
-
     </div>
-
-
 </body>
 
 </html>
