--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -1,10 +1,10 @@
-.row-two{
+/* .row-two{
     display: grid;
     grid-template-columns: 1fr 12fr 1fr;
     background-color: #ee8905;
     height:100%;
-}
+} */
 
-.pull-right{
-    float: right;
+.main-outlet{
+    display:none;
 }
