--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/purple-green.css';
 * {
     margin: 0px;
     padding: 0px;
@@ -9,8 +10,8 @@ html,
 body {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(0, 17, 255);
-    color: rgb(255, 255, 255)
+    background-color: rgb(86, 247, 185);
+    
 }
 
 .container-padding{
@@ -18,9 +19,31 @@ body {
     border: 1px dashed #ffffff;
 }
 
-.center {
+/* .row-one
+{
+    display:grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+    width: 100%;
+} */
+
+.row-one,
+.row-two,
+.row-three {
+    display:grid;
+    grid-template-columns: 1fr 5fr 2fr;
+    height: 100%;
+    width: 100%;
+}
+
+.row-two {
+    background-color: #d305ee;
+}
+
+
+/* .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+  } */
